samples/_failures_safe/1761353122_af063c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5936bb66.c: In function ‘main’:
./samples/SAFE/__tmp_5936bb66.c:163:25: error: missing terminating " character
  163 |         fprintf(stderr, "Failed to create token list
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5936bb66.c:163:9: error: expected expression at end of input
  163 |         fprintf(stderr, "Failed to create token list
      |         ^~~~~~~
./samples/SAFE/__tmp_5936bb66.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5936bb66.c:163:9: error: expected declaration or statement at end of input
